--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">kullanıcıarayuzu</string>
-    <string name="edit_message" translatable="false">Enter a message</string>
     <string name="button_send">send</string>
     <string name="edit_message1">Enter a message</string>
+    <string name="edit_message" />
 </resources>
